Fix checkbox alignment

--- a/frontend/components/forms/fields/Checkbox/_styles.scss
+++ b/frontend/components/forms/fields/Checkbox/_styles.scss
@@ -40,7 +40,7 @@
 
   &__tick {
     @include size(20px);
-    @include position(absolute, 5px null null 0);
+    @include position(absolute, 1px null null 0);
     display: inline-block;
 
     &::after {
