--- a/frontend/pages/admin/AppSettingsPage/_styles.scss
+++ b/frontend/pages/admin/AppSettingsPage/_styles.scss
@@ -288,4 +288,8 @@
   .component__tooltip-wrapper {
     margin-bottom: $pad-xsmall;
   }
+
+  .fleet-checkbox__tick {
+    top: 4px;
+  }
 }
